Dark Mode Fix
For eye comfort, I decided upon start the website is on dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 :root {  
     /* Just some variables for colors in our webpage we will use */
+    --bg-black-900:#151515; 
+    --bg-black-100:#222222;
+    --bg-black-50:#393939;
+    --text-black-900:#ffffff;
+    --text-black-700:#e9e9e9;
+}
+
+body.light{  
+    /* Just some variables for colors in our webpage we will use */
     --bg-black-900:#f2f2fc; 
     --bg-black-100:#fdf9ff;
     --bg-black-50:#e8dfec;
     --text-black-900:#302e4d;
-    --text-black-700:#504e70;
-}
-
-body.dark{  
-        /* Just some variables for colors in our webpage we will use */
-        --bg-black-900:#151515; 
-        --bg-black-100:#222222;
-        --bg-black-50:#393939;
-        --text-black-900:#ffffff;
-        --text-black-700:#e9e9e9;
+    --text-black-700:#504e70;    
 }
 
 body {
